# trip-ingestor

./: README.md  dbschema.sql  docker-compose.yml  dockerfile  makefile  pyproject.toml
src/: ingest.py  main.py  question1.sql  question2.sql  utils.py
